Changed css for jumpotron text to fix Firefox issue and tighten up some pages.

--- a/app/styles/_pageSpecific.scss
+++ b/app/styles/_pageSpecific.scss
@@ -6,8 +6,12 @@
 		background-image: url(../images/FranklinVsZeus.jpg);
 		background-position: center;
 		background-repeat: no-repeat;
-			h1 {
+			.darkLayer {
 				margin-top: 150px;
+			}
+			h1 {
+				margin-top: 0px;
+				padding-top:15px;
 			}
 			p {
 				font-weight: bolder;
@@ -37,7 +41,7 @@
 		background-image: url(../images/RooseveltVsBigfoot.jpg);
 		background-position: center;
 			h1 {
-				margin-top: 2em;
+				margin-top: 4em;
 				color: white;
 			}
 			p {
@@ -103,9 +107,13 @@
 		background-image: url(../images/Cinton.jpg);
 		background-position: center;
 		padding-bottom: 20px;
-			h1 {
-				color: white;
-				margin-top: 260px;
+			.darkLayer {
+				margin-top: 280px;
+				h1 {
+					color: white;
+					margin-top: 15px;
+					padding: 0px 10px;
+				}
 			}
 			p {
 				color: white;
@@ -213,10 +221,15 @@
 	.jumbotron {
 		background-image: url(../images/ObamaLionKing.jpg);
 		background-position: center;
-			h1 {
-				margin-top: 280px;
-			}
 			padding-bottom: 20px;
+			.lightLayer {
+				margin-top: 250px;
+				h1 {
+					margin-top: 15px;
+					padding-top: 0px;
+					padding-bottom: 0px;
+				}
+			}
 	}
 	aside {
 		li {
@@ -232,8 +245,13 @@
 	.jumbotron {
 		background-image: url(../images/GWVZombies.jpg);
 		background-position: center;
-			h1 {
-				margin-top: 180px;
+			.lightLayer {
+				margin-top: 220px;
+				h1 {
+					margin-top: 15px;
+					padding-top: 0px;
+					padding-bottom: 0px;
+				}
 			}
 
 	}	
@@ -246,7 +264,7 @@ $jasmineBlue: #ADD8E6;
 	.jumbotron {
 		background-image: url(../images/Jasmine.jpg);
 		background-position: right;
-		padding: 220px 0px 10px 0px ;
+		padding: 330px 0px 10px 0px ;
 			h1 {
 				text-align: left;
 				margin-left: 20px;
@@ -326,8 +344,12 @@ $jasmineBlue: #ADD8E6;
 	.jumbotron {
 		background-image: url(../images/NixonVSaber.jpg);
 		background-position: center;
-			h1 {
+			.lightLayer {
 				margin-top: 300px;
+				h1 {
+					margin-top: 15px;
+					padding: 0px 15px;
+				}
 			}
 
 	}
